--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,5 +3,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="padding_license_level_1">10dp</dimen>
+    <dimen name="padding_license_level_2">25dp</dimen>
 
 </resources>
