--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,58 +5,65 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:paddingTop="48dp"
     tools:context="org.vosie.wikicards.MainActivity"
     tools:ignore="MergeRootFrame" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingTop="24dp" >
+    <!-- Learning xxx from Wikipedia -->
 
-        <!-- Learning xxx from Wikipedia -->
+    <TextView
+        android:id="@+id/label_wikicards"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/label_learning"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="32sp" />
 
-        <TextView
-            android:id="@+id/label_wikicards"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_learning"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="32sp" />
+    <Spinner
+        android:id="@+id/spinner_language"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:prompt="@string/title_spinner"
+        android:spinnerMode="dialog"
+        android:textAlignment="center" />
 
-        <Spinner
-            android:id="@+id/spinner_language"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:prompt="@string/title_spinner"
-            android:spinnerMode="dialog"
-            android:textAlignment="center" />
+    <TextView
+        android:id="@+id/label_fromwiki"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/title_fromwiki"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="32sp" />
 
-        <TextView
-            android:id="@+id/label_fromwiki"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/title_fromwiki"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="32sp" />
-    </LinearLayout>
     <!-- control buttons -->
 
-    <Button
-        android:id="@+id/button_cardmode"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/button_cardmode"
-        android:text="@string/button_cardmode" />
+        android:orientation="vertical"
+        android:paddingLeft="70dp"
+        android:paddingRight="70dp" >
 
-    <Button
-        android:id="@+id/button_downloaddb"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/button_downloaddb"
-        android:text="@string/button_downloaddb" />
+        <Button
+            android:id="@+id/button_cardmode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:background="@drawable/button_blue"
+            android:contentDescription="@string/button_cardmode"
+            android:text="@string/button_cardmode"
+            android:textColor="@drawable/button_text" />
+
+        <Button
+            android:id="@+id/button_downloaddb"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/button_blue"
+            android:contentDescription="@string/button_downloaddb"
+            android:text="@string/button_downloaddb"
+            android:textColor="@drawable/button_text" />
+    </LinearLayout>
 
 </LinearLayout>
