--- a/res/layout/card.xml
+++ b/res/layout/card.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg" >
+    android:background="@drawable/card_bg" >
 
     <LinearLayout
         android:id="@+id/general_card"
@@ -9,21 +9,30 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
+        <Button
+            android:id="@+id/button_go_to_wiki"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#000" />
+
         <TextView
             android:id="@+id/textview_word"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
             android:gravity="center"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:text="@string/loading"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#000" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="28dp"
-            android:layout_weight="1" >
+            android:layout_height="150dp"
+            android:layout_marginTop="24dp" >
 
             <ProgressBar
                 android:id="@+id/progressBar_loadingimage"
@@ -34,18 +43,20 @@
 
             <ImageView
                 android:id="@+id/imageview_photo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="210dp"
+                android:layout_height="140dp"
                 android:layout_centerInParent="true"
                 android:contentDescription="@string/imageview_content_description_flag"
                 android:visibility="invisible" />
         </RelativeLayout>
 
         <ScrollView
+            android:id="@+id/scrollView_desc"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:layout_margin="@dimen/activity_vertical_margin"
+            android:layout_margin="12dp"
             android:layout_weight="1"
+            android:background="@drawable/description_view_bg"
             android:scrollbars="vertical" >
 
             <LinearLayout
@@ -62,13 +73,6 @@
                     android:textColor="#000" />
             </LinearLayout>
         </ScrollView>
-
-        <Button
-            android:id="@+id/button_go_to_wiki"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/button_go_to_wiki"
-            android:textColor="#000" />
     </LinearLayout>
 
     <RelativeLayout
@@ -83,6 +87,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#000" />
     </RelativeLayout>
