--- a/res/layout/card.xml
+++ b/res/layout/card.xml
@@ -11,14 +11,15 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:padding="5dp" >
 
             <Button
                 android:id="@+id/button_go_to_wiki"
-                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
+                android:background="@drawable/button_white"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="#000" />
 
