--- a/res/layout/license.xml
+++ b/res/layout/license.xml
@@ -85,4 +85,19 @@
         android:text="@string/label_license_androidWheel_url"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/padding_license_level_2"
+        android:text="@string/label_license_stickyListHeaders"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/url_stickyListHeaders"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/padding_license_level_2"
+        android:text="@string/label_license_stickyListHeaders_url"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
 </LinearLayout>
