--- a/res/layout/activity_card.xml
+++ b/res/layout/activity_card.xml
@@ -31,6 +31,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:background="@drawable/button_green"
+            android:contentDescription="@string/button_desc_previous"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@drawable/button_text" />
 
@@ -49,6 +50,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/button_green"
+            android:contentDescription="@string/button_desc_next"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@drawable/button_text" />
     </RelativeLayout>
